[package]
name = "mt-ext-authz-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envoy-types = "0.3.0"
tonic = "0.10.2" # envoy-types@0.3.0 not compat with tonic 0.11
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1" }
anyhow = "1.0.81"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
clap = { version = "4.5.3", features = ["derive", "cargo"] }

[profile.release]
strip = true
opt-level = "z" # Optimize for size
lto = true
codegen-units = 1
