[package]
name = "mt-ext-proc-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
envoy-types = "0.4.0"
tonic = "0.11"
tonic-health = "0.11"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1.15" }
anyhow = "1.0.81"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
h2 = { version = "0.3.25" }

[profile.release]
strip = true
opt-level = "z" # Optimize for size
lto = true
codegen-units = 1
